--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,8 @@ celerybeat.pid
 # Environments
 .env
 .venv
+.vscode
+.DS_Store
 env/
 venv/
 ENV/
@@ -129,3 +131,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# PretraindModel
+*.bin
