--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
+hnswlib==0.4.0
 nltk==3.5
 numpy==1.18.5
 scikit-learn==0.23.2
-scipy==1.5.4
 tensorflow==1.15.0
 torch==1.7.0
-tqdm==4.54.0
 transformers==3.5.1
