--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM huggingface/transformers-gpu
+FROM huggingface/transformers-gpu:3.5.1
 
-RUN pip install --no-cache-dir nltk==3.5 scikit-learn==0.23.2 'jedi<0.18.0'
+RUN pip install --no-cache-dir nltk==3.5 scikit-learn==0.23.2 'jedi<0.18.0' hnswlib==0.4.0
     
